--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@szhsin/react-accordion": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-wizard-component": "^0.1.7",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9"
   },
