--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-form-wizard-component": "^0.1.7",
+    "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9"
   },
