--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@szhsin/react-accordion": "^1.2.3",
+    "date-fns": "^2.30.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-form-wizard-component": "^0.1.7",
     "react-hook-form": "^7.45.4",
