Hosting setup and some fixes

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intercourier",
-  "homepage": "https://intercourier.netlify.app/",
+  "homepage": "https://intercourier.cl/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
