--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT = 5000
 HOST = localhost
 LOCAL_CLIENT_APP = http://localhost:3000
-REMOTE_CLIENT_APP = https://intercourier.netlify.app/
+REMOTE_CLIENT_APP = https://intercourier.cl/
 LOCAL_SERVER_API = http://localhost:5000
-REMOTE_SERVER_API = https://intercourierapi.netlify.app/
+REMOTE_SERVER_API = https://api.intercourier.cl/
