changes in frontend and optimizations

--- a/server/config.json
+++ b/server/config.json
@@ -1,6 +1,6 @@
 {
-    "apiKey": "29F5E3FF-FA73-4B20-90EA-7D2F539LCDC2",
-    "secretKey": "cbd3f0c8286f9245b9ba48cca3989ce276523c04",
-    "apiURL": "https://sandbox.flow.cl/api",
+    "apiKey": "4F57FBA7-61FB-4AB1-B44B-1L9E23E193A5",
+    "secretKey": "b1a422db64062fb6d0f3b60741cde29858c4ea11",
+    "apiURL": "https://www.flow.cl/api",
     "baseURL": "https://api.intercourier.cl/apiFlow"
 }
